--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "serve": "gatsby serve",
     "lint": "tslint -t stylish -p tsconfig.json",
     "lint:fix": "tslint -p tsconfig.json -t stylish --fix 'src/**/*.ts'",
-    "format": "prettier --write src/sites/sites.yaml"
+    "format": "prettier --write src/sites/sites.yaml",
+    "deploy": "gatsby build && gh-pages -d public -b gh-pages"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.15.2",
     "gatsby-image": "^2.2.16",
     "gatsby-plugin-google-analytics": "^2.1.13",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.2.13",
     "gatsby-plugin-netlify": "^2.1.11",
     "gatsby-plugin-offline": "^3.0.1",
@@ -42,6 +44,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^5.0.9",
     "@types/styled-components": "^4.1.18",
+    "gh-pages": "^3.1.0",
     "prettier": "^1.18.2",
     "tslint": "^5.19.0",
     "tslint-config-airbnb": "^5.11.1",
